client/src/app/components/web/common/header/header.component.css
h1, h2, h3, h4, h5, h6, li {
    font-family: 'Roboto', sans-serif;
    line-height: 1;
    letter-spacing: 0.1em;
    font-weight: 300;
}

.card-header a {
    font-size: 25px !important;
    font-weight: bold;
}

.card-header {
    padding: 1%;
    background: transparent;
    border-radius: 0;
    border: none;
    border-top: solid 1px white; 
}

.card {
    background: transparent;
    border: none;
}

.card-block {
    padding: 0;
    padding-left: 2%;
}

a:hover {
    cursor: pointer;
}

.overlay {
    height: 0%;
    width: 100%;
    position: fixed;
    z-index: 3; 
    top: 0;
    left: 0;
    background-color: rgba(0,0,0, 0.82); 
    overflow: hidden;
    transition: 0.5s;
}

.overlay p {
    cursor: pointer;
    margin-top: 0;
    margin-bottom: 0;
}

.overlay-content {
    position: relative;
    width: 100%;
    padding-left: 10%;
    padding-right: 10%;
}
.overlay #resultsList{
    border-bottom: 1px solid white;
}

.overlay a, .overlay li {
    padding: 2px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
    font-weight: bold;
}

.overlay a:hover, .overlay a:focus, .overlay li:hover, .overlay li:focus {
    color: #f1f1f1;
}

@media screen and (max-height: 600px) {
    input,
    input::-webkit-input-placeholder {
        font-size: 50px;
    }
    .btnSearch {
        font-size: 30px;
    }
}

@media screen and (max-height: 400px) {
    input,
    input::-webkit-input-placeholder {
        font-size: 20px;
    }
    btnSearch {
        font-size: 20px;
    }
}
#nav {
    background-color: rgba(255, 255, 255, 0.8);
}

.textBox {
    color: white;
    background: transparent;
    border: none;
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    height: 100px;
    width: 90%;
    font-size: 70px;
    padding-right: 10%;
    font-family: 'Roboto', sans-serif;
}

.textBox:focus {
    outline: none;
}

.btnSearch {
    background: transparent;
    color:white;
    outline: none;
    border: none;
    cursor: pointer;
    float: right;
    font-size: 80px;
    height: 100px;
    width: 10%;
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    text-align: center;
    vertical-align: middle;
}

.relatedHeader {
    background-color:  #666359;
}

@media screen and (max-width: 576px) {
    .relatedHeader {
        height: 15px !important;
    }
}

.relatedHeader a {
    color: #e0e0e0;
}


.relatedHeader a:hover {
    color: white;
}

.primary-nav {
    display:-webkit-flex;
    display:flex;
    list-style-type:none;
    padding:0;
    justify-content:flex-end;
}

.left {
    margin-right:auto;
    margin-left: 10px;
}



#logo {
    max-width: 100%;
    height: auto;
}

.logo {
    margin: 10px;
    z-index: 999;
}

@media screen and (max-width: 1000px) and (min-width: 480px) {
    .logo {
        height:60px;
        width: 329px;
        margin-top: 12px;
        margin-left: 5px;
    }
}


@media screen and (max-width: 480px) {
    .logo {
        height:33px;
        width: 200px;
        margin-top: 10px;
        margin-left: 5px;
    }
}
.nav-link{
    float: right !important;
    text-align: center;
    width: auto;
    padding: 0.1rem 0.3rem !important;
}
.menu,.menuLogin {
    width: 60px;
    height: 60px;
    position: fixed;
    right: 20px;
    display: inline-block;
    z-index: 999
}

.menuLogin {
    right: 90px;
}

@media screen and (max-width: 1000px) and (min-width: 480px) {
    .menu, .menuLogin {
        height:50px;
        width: 50px;
        padding-right: 10%;
    }
}

@media screen and (max-width: 450px) {
    .aMenu, .aLogin, .menu, .menuLogin {
        height: 40px;
    }
}

@media screen and (max-width: 450px) {
    .menuLogin {
        right: 65px;
    }
}

@media screen and (max-width: 1250px) and (min-width: 360px){
    .textBox{
        font-size: 25px;
        height: 60px;
    }
    .btnSearch{
        font-size: 25px;
        height: 60px;
    }
    .overlay a, .overlay li{
        font-size: 20px;
    }
    ::-webkit-input-placeholder {
        font-size: 20px !important;
     }
     
     :-moz-placeholder { /* Firefox 18- */
        font-size: 20px !important;
     }

     ::-moz-placeholder {  /* Firefox 19+ */
        font-size: 20px !important;
     }
	
	:-ms-input-placeholder { /* Internet Explorer 10-11 */
        font-size: 20px !important;
	}
	
	::-ms-input-placeholder { /* Microsoft Edge */
        font-size: 20px !important;
	}
}

@media (max-width: 768px) { 
    .imgob{
        width :25%;
        vertical-align: text-top;
    }
    .nav-link{
        font-size: 7px;
    }
    .col-xs-2{
        width: 50%;
      
    }
}

@media (max-width: 450px) { 
    .imgob{
        width :25%;
        vertical-align: text-top;
    }
    .nav-link{
        font-size: 5.3px;
    }
    .col-xs-2{
        width: 50%;
        height: 17px;
    }
}


@media (min-width:768px) and (max-width: 940px) { 
    
    .imgob{ 
        width :18%;
    }
    .nav-link{
        font-size: 12px;
    }
 }
@media (min-width: 940px) and (max-width: 1170px) { 
    .imgob{
        width :13%;
    }
    .nav-link{
        font-size: 10px;
    }
 }
@media (min-width: 1170px) { 
    .imgob{
        width :8%;
    }
    .nav-link{
        font-size: 11px;
        display: block
    }

 }



.active {
    color:#ffffff !important;
    font-weight:bold;
    border-bottom: 2px solid #76a1b8;
    text-align: center;
}
  @include media-breakpoint-up(sm) {
    .active {
        color:#ffffff !important;
        font-weight:bold;
        border-bottom: 3px solid #76a1b8;
        text-align: center;
      font-size: 12px;
    }

   
  }
  
  @include media-breakpoint-up(md) {
    .active {
        color:#ffffff !important;
        font-weight:bold;
        border-bottom: 3px solid #76a1b8;
        text-align: center;
      font-size: 14px;
    }
    
  }
  
  @include media-breakpoint-up(lg) {
    .active {
        color:#ffffff !important;
        font-weight:bold;
        border-bottom: 3px solid #76a1b8;
        text-align: center;
      font-size: 16px;
    }
  }

@media screen and (max-width: 360px) {
    .textBox{
        font-size: 25px;
        height: 50px;
    }
    .btnSearch{
        font-size: 25px;
        height: 50px;
    }
    .overlay a, .overlay li{
        font-size: 15px;
    }
    .logo{
        height: 34px;
        width: 160px;
    }
    .menuLogin{
        height:30px;
    }
    .menu{
        height: 30px;
    }
    .aLogin{
        height: 30px;
    }
    .aMenu{
        height: 30px;
    }
    ::-webkit-input-placeholder {
        font-size: 15px !important;
     }
     
     :-moz-placeholder { /* Firefox 18- */
        font-size: 15px !important;
     }

     ::-moz-placeholder {  /* Firefox 19+ */
        font-size: 15px !important;
     }
	
	:-ms-input-placeholder { /* Internet Explorer 10-11 */
        font-size: 15px !important;
	}
	
	::-ms-input-placeholder { /* Microsoft Edge */
        font-size: 15px !important;
	}    
}


@media screen and (max-width: 850px){
    
    .left{
        margin-left: 0;
        width: 100%;
        padding-top:8px;
    }
    .right{
        width: 100%;
    }
}

.bg-light{
    background-color: rgba(255, 255, 255, 0.8) !important;
}

